# pyhub_shortcut

./: DISTRIBUTION_GUIDE.md  MANIFEST.in  PyHubDropList.spec  README.md  RELEASE_STATUS.md  SYSTEM_TRAY_GUIDE.md  build_exe.py  build_simple.py  old_build.py  publish.py  publish_helper.py  pyproject.toml  release.py  requirements.txt  setup.py
examples/: demo.py  demo_advanced.py  droplist_demo.py  droplist_tray.py
pyhub_droplist_coimbrox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pyhub_shortcut/: __init__.py  cli.py  config.py  config_manager.py  core.py  core_improved.py  droplist_manager.py  ui.py
